<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/footer1"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/footer2" />

    <Button
        android:id="@+id/addBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/footer1"
        android:text="Aggiungi libro"/>

    <Button
        android:id="@+id/exitCatalogue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/addBook"
        android:text="Esci"/>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_below="@id/exitCatalogue"
        android:layout_marginTop="50dp"
        android:src="@drawable/footer2" />


</RelativeLayout>